layout changes & bootstrap icon add

--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -12,6 +12,11 @@
 @media (min-width: 1200px) and (max-width: 1400px){
 	.device-usage-chart .width-50-p{width: 100%;}
 }
+@media (min-width: 1301px){
+	.sidebar-shrink .left-side-bar.open, .sidebar-shrink .left-side-bar{left: -281px;}
+	.sidebar-shrink .header{width: 100%;}
+	.sidebar-shrink .main-container{padding-left: 20px;}
+}
 @media (max-width: 1300px){
 	.main-container{padding-left: 0; padding-right: 0;}
 	.header-left .menu-icon{display: flex;}
